# vit-pet-classification-pipeline

./: .gitignore  LICENSE  README.md  REPORT.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
docs/: evaluation-template.md  ml-delivery-plan.md  model-card-template.md  release-candidate-runbook.md
docs/demo/: README.md
scripts/: run_release_candidate.ps1
src/: __init__.py
src/api/: __init__.py  main.py
src/inference/: __init__.py  bootstrap.py  predict.py
src/training/: __init__.py  eval_vit.py  inspect_data.py  metrics.py  prepare_oxford_pet_binary.py  release_manifest.py  train_vit.py
src/ui/: __init__.py  app.py
tests/: test_api_contract.py  test_bootstrap.py  test_predict.py  test_public_ui_contract.py  test_training_artifacts.py
