[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-pet-classification-pipeline"
version = "0.1.0"
description = "Local-first ViT cats-vs-dogs classification demo with API and UI surfaces."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Arsenios Diamantakos" }]
dependencies = [
    "fastapi>=0.111,<1.0",
    "huggingface-hub>=0.24,<1.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "pillow>=10.0,<12.0",
    "python-multipart>=0.0.9,<1.0",
    "streamlit>=1.40,<2.0",
    "torch>=2.2,<3.0",
    "torchvision>=0.17,<1.0",
    "transformers>=4.46,<5.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
